welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: not found: value to
	for(i<- to getMondeLargeur()-1) {
                ^